# mindscape

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  Vagrantfile  analysis.sh  control.sh  repetacule  teste.cpp
data/: backup
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  (+10 more)
engine/: CMakeLists.txt
engine/include/: CMakeLists.txt  animation.hpp  audio.hpp  component.hpp  event.hpp  event_handler.hpp  game.hpp  game_object.hpp  hitbox.hpp  image.hpp  keyboard_event.hpp  level.hpp  log.hpp  observable.hpp  observer.hpp  persistence.hpp  persistence_dat.hpp  persistence_map.hpp  physics.hpp  scene.hpp  state_map.hpp  text.hpp  time.hpp  timer.hpp  translator.hpp
engine/src/: animation.cpp  audio.cpp  component.cpp  event_handler.cpp  game.cpp  game_object.cpp  game_with_hardcoded_moves.cpp  hitbox.cpp  image.cpp  keyboard_event.cpp  level.cpp  persistence_dat.cpp  persistence_map.cpp  physics.cpp  scene.cpp  state_map.cpp  text.cpp  time.cpp  timer.cpp  translator.cpp
mindscape/engine/: CMakeLists.txt
mindscape/engine/include/: CMakeLists.txt  Game.hpp  SDL2basics.hpp  Texture.cpp  Texture.hpp  animation.hpp  audio.hpp  color.hpp  component.hpp  event_handler.hpp  game.hpp  game_object.hpp  image.hpp  keyboard_event.hpp  level.hpp  little_girl.hpp  scene.hpp  text.hpp  texture.hpp  time.hpp  timer.hpp  translator.hpp
mindscape/engine/src/: Game.cpp  Texture.cpp  a.out  animation.cpp  audio.cpp  event_handler.cpp  game.cpp  game_object.cpp  game_with_hardcoded_moves.cpp  image.cpp  keyboard_event.cpp  level.cpp  little_girl.cpp  scene.cpp  texture.cpp  time.cpp  time.hpp  timer.cpp  translator.cpp
(+1595 files in other folders)
